# c-20-gmock-non-virtual

./: CMakeLists.txt  foo.h  main.cpp  testing.cpp
